--- a/Project/home-page.css
+++ b/Project/home-page.css
@@ -17,7 +17,7 @@ button {
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 30px 10%;
 }
@@ -55,9 +55,10 @@ button:hover {
   align-items: center;
 }
 
-.logo {
+.banner {
+  display: flex;
   cursor: pointer;
-  margin-right: auto;
+  justify-content: center;
 }
 
 .web-name {
