--- a/Project/home-page.css
+++ b/Project/home-page.css
@@ -2,17 +2,17 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #24252A;
+  background-color: #7dc3dd;
 }
 
-li,
-a,
-button {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  color: #edf0f1;
-  text-decoration: none;
+.banner {
+  background-image: url("banner-pidgey-2.png");
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 5vw;
+  min-height: 5vh;
 }
 
 header {
@@ -22,54 +22,42 @@ header {
   padding: 30px 10%;
 }
 
-.nav__links li {
-  display: inline-block;
-  padding: 0px 20px;
-}
-
-.nav__links li a {
-  transition: all 0.3s ease 0s;
-}
-
-.nav__links li a:hover {
-  color: #0088a9;
-}
-
 button {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #edf0f1;
   padding: 9px 25px;
   background-color: rgb(0, 136, 169);
-  border: none;
+  border: 2px solid black;
   border-radius: 50px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 }
-
 button:hover {
   background-color: rgba(0, 136, 169, 0.8);
 }
 
-.info-1 {
-  color: white;
+.info-box {
   display: flex;
   flex-direction: column;
+  color: black;
+  text-align: center;
+  word-wrap: break-word;
+  width: 500px;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60em;
+  border: 2px solid black;
 }
 
-.banner {
-  display: flex;
-  cursor: pointer;
-  justify-content: center;
-}
-
-.web-name {
-  cursor: pointer;
-  text-align: center;
-  color: white;
-}
-
-.test {
+.landing-image {
   display: block;
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  min-width: 25vw;
 }
 
 /*# sourceMappingURL=home-page.css.map */
