--- a/Project/home-page.scss
+++ b/Project/home-page.scss
@@ -1,18 +1,16 @@
+@use "button";
+@use "banner";
+@use "text";
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252A;
+    background-color: #7dc3dd;
 }
 
-li,
-a,
-button {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    text-decoration: none;
+.banner {
+    @include banner.banner
 }
 
 header {
@@ -22,52 +20,14 @@ header {
     padding: 30px 10%;
 }
 
-.nav__links li {
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.nav__links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav__links li a:hover {
-    color: #0088a9;
-}
-
 button {
-    padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+    @include button.button;
 }
 
-button:hover {
-    background-color: rgba(0, 136, 169, 0.8);
+.info-box {
+    @include text.text-box-1
 }
 
-.info-1 {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.banner {
-    display: flex;
-    cursor: pointer;
-    justify-content: center;
-}
-
-.web-name {
-    cursor: pointer;
-    text-align: center;
-    color: white;
-}
-
-.test {
-    display: block;
-    text-align: center;
+.landing-image {
+    @include banner.background;
 }
