--- a/Project/_banner.scss
+++ b/Project/_banner.scss
@@ -4,8 +4,8 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    height: 5vw;
-    min-height: 5vh;
+    height: 20%;
+    min-height: 20%;
 }
 
 @mixin background {
