--- a/Project/plan-your-trip.css
+++ b/Project/plan-your-trip.css
@@ -15,8 +15,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  height: 5vw;
-  min-height: 5vh;
+  height: 20%;
+  min-height: 20%;
 }
 
 header {
@@ -78,12 +78,14 @@ input {
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+  border: 2px solid black;
 }
 
 .tab {
   width: 100%;
   color: black;
   overflow: hidden;
+  border: 0.1px solid black;
 }
 .tab-label {
   display: flex;
