--- a/Project/plan-your-trip.scss
+++ b/Project/plan-your-trip.scss
@@ -57,12 +57,15 @@ input {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+    border: 2px solid black;
 }
 
 .tab {
     width: 100%;
     color: black;
     overflow: hidden;
+    border: 0.1px solid black;
+
 
     &-label {
         display: flex;
@@ -71,6 +74,7 @@ input {
         background: #f9e076;
         font-weight: bold;
         cursor: pointer;
+
 
         /* Icon */
         &:hover {
